# AI-large-model-application-development

./: AI模型与输入输出.md  AI读取文件及RAG应用.md  API用法示例.md  LICENSE  LangChain介绍.md  README.md  pyproject.toml  requirements.txt  提示词工程.md  给AI模型添加记忆.md  给AI模型用工具的能力.md  视频脚本一键生成器.md
code/AI模型与输入输出/: .env  langchain01.ipynb  langchain02.ipynb  langchain03.ipynb  langchain04.ipynb  langchain05.ipynb  langchain06.ipynb
code/AI模型工具应用/: Agent_01.py  Agent_02.py  Agent_03.py  data.csv
code/RAG应用/: RAG_01.py  RAG_02.py  RAG_03.py  RAG_04.py  RAG_05.py  RAG_06.py  RAG_07.py  example.txt  output.txt
code/api用法示例/: .env  api_test01.ipynb  api_test02.ipynb  api_test03.ipynb  api_test04.ipynb
code/db/watermelon_book_faiss/: index.pkl
code/视频脚本一键生成器/: .gitignore  DEMO.md  LICENSE  README.md  example.py  main.py  requirements.txt  run.py  start.bat  test_runner.py  utils.py
code/视频脚本一键生成器/tests/: test_core.py
